--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
       <ul class="gallery">
 
       </ul>
-
+      <div class="load-more-div">
       <button class="load-more">Load more</button>
-      
+      </div>
       <span class="loader hidden"></span>
     <script type="module" src="./main.js"></script>
   </body>
